# RealTek_Router

users/: COMMON_FLAGS.mk  Kconfig  Makefile
users/CMCC_DM/: CMCC_DM  Makefile  readme.txt
users/CMCC_DM/core/: registration.c
users/FTY_TEST/: FTY_TEST  Makefile  gpiopin.h  main.c
users/IAPP/: iapp
users/adapter-api/: Kconfig  Makefile
users/adapter-api/cmcc/: Makefile  cmcc_api.c  cmcc_api.h
users/adapter-api/common/: common_utility.c
users/adapter-api/rtk_api/: Makefile  rtk_api.h  rtk_common_utility.h  rtk_disk_adapter.c  rtk_ethernet_adapter.c  rtk_ethernet_adapter.h  rtk_eventd  rtk_firewall_adapter.c  rtk_firewall_adapter.h  rtk_lan_adapter.c  rtk_misc_adapter.c  rtk_other_adapter.c  rtk_wan_adapter.c  rtk_wifi_adapter.c
users/adapter-api/test_case/: Makefile  testcase.c
users/andlink/: Makefile  Makefile.release  andlink  andlink-core.h  andlink.c  andlink.h  andlink_interface.h  ca.crt
users/andlink/andlink-if5/: Makefile  andlink-if5.c  andlink-if5.h
users/arptables-v0.0.4/: Makefile
users/arptables-v0.0.4/arptables-v0.0.4/: arptables
users/auth/src/: auth
users/boa/: .kernel_config  Makefile  wfaudio.include.mk
users/boa/HN100_340EA/: index.htm  main.html
users/boa/HN120_341BA/: index.html  login.html  main.html
users/boa/apmib/: .depend  apmib.c  apmib.h  def_setting_config.h  mibdef.h  mibtbl.c
users/boa/defconfig/: Makefile  config-HN100-340EA.txt  config-HN120-341EA.txt  config-HN140-361EA.txt  config-HN330-331EA.txt  config-HN350-339EA.txt  config-ap-97f-8812-8363NB.txt  config-example-2g.txt  (+7 more)
users/busybox-1.13/: .busybox_unstripped.cmd  .config  .config.old  busybox  busybox.links  busybox_unstripped  busybox_unstripped.map  busybox_unstripped.out
users/curl-7.36.0/: Makefile  Makefile.in  config.status  curl-config  libcurl.pc  libtool
users/gpio_control/: Makefile  gpiopin.h  main.c
users/igmpproxy/: ifvc.c  igmpproxy  mroute-api.c
users/iproute2-2.6.29-1/: Config
users/iptables-1.4.4/: Makefile  config.status  configure  ip6tables-static  ip6tables.8  iptables-static  iptables-xml  iptables.8  libtool  libxtables.la  xtables.lo
users/l2tpd/: l2tpd
users/libcoap-master/: Makefile  Makefile.in  aclocal.m4  coap_config.h  coap_config.h.in  config.status  configure  libcoap-1.la  libcoap-1.pc  libtool
users/libiconv-1.14/: Makefile  config.h  config.status  libtool
users/miniigd/: built_time  miniigd  picsdesc.skl
users/mldproxy/: main.c  mldproxy
users/mp-daemon/: UDPserver
users/mqtt/: Makefile
users/ndisc6-1.0.3/: aclocal.m4  configure
users/ntpclient/: ntpclient
users/online_update/: Makefile  main.c
users/ont_crypto/: Makefile  md5.h  ont_aes_ecb.c
users/opencapwap/: AACWTP_4.4.7-mips-EB  AACWTP_4.4.7-mips-EL  AC_4.4.7-mips-EB  AC_4.4.7-mips-EL  WTP_4.4.7-mips-EB  WTP_4.4.7-mips-EL  config.ac  write_setting_4.4.7-mips-EB  write_setting_4.4.7-mips-EL  wum_4.4.7-mips-EB  wum_4.4.7-mips-EL
users/openssl-1.0.2d/: Makefile  libcrypto.pc  libcrypto.so.1.0.0  libssl.pc  libssl.so.1.0.0
users/pptp-1.7.2/: pptp
users/radvd-0.9.1/: Makefile  config.h  config.h.in  config.status  configure  radvd  radvd.8  radvd.conf.5  radvdump  radvdump.8
users/rc/: Makefile  reload  reload.c
users/reinit/: reinitFunc_lan.c  reinitSer.h
users/routed/: routed
users/rtl_link/: Makefile  fwupgrade.c  fwupgrade.h  rtl_link.c  rtl_link.h  rtl_link_list.c  rtl_link_list.h  rtl_link_utils.c  rtl_link_utils.h
users/sdk-all-in-one/: Makefile
users/sdk-all-in-one/sdk-all-in-one/monvif/: CMakeLists.txt  device_config.c  device_config.h  isp_info.c  isp_info.h  message.cpp  message.h  monvif.c  ont_mqtt_isp.c  ont_mqtt_video.c  ont_mqtt_video.h  ont_video_play.c  onvif_config.c  onvif_config.h  reboot_task.c  reboot_task.h  status_sync.c  status_sync.h  update_cmd.c  update_cmd.h
users/sdk-all-in-one/sdk-all-in-one/monvif/daemon/: CMakeLists.txt
users/sdk-all-in-one/sdk-all-in-one/monvif/daemon/conf/: update_cfg.xml
users/sdk-all-in-one/sdk-all-in-one/monvif/daemon/src/: BaseUpdate.h  RemoteUpdate.cpp  RemoteUpdate.h  ServiceWatcher.cpp  ServiceWatcher.h  SysCmdUtil.cpp  SysCmdUtil.h  UpdateCmd.h  main.c
users/sdk-all-in-one/sdk-all-in-one/monvif/daemon/src/thirdpart/: log.h  xml_conf.h
users/sdk-all-in-one/sdk-all-in-one/monvif/daemon/src/thirdpart/md5/: md5.h
users/sdk-all-in-one/sdk-all-in-one/monvif/daemon/src/thirdpart/tinyxml/: makefile
users/sdk-all-in-one/sdk-all-in-one/realtek/edp/: CMakeLists.txt  common.h  edp.c  message.h
users/sdk-all-in-one/sdk-all-in-one/test/jtext/: CMakeLists.txt  main.cpp
users/sdk-all-in-one/sdk-all-in-one/test/modbus/: CMakeLists.txt  main.cpp  test_ds.cpp  test_modbus.cpp  test_utils.cpp
users/udhcp-0.9.9-pre/: Makefile  dhcpc.c  dhcpd.c  dumpleases  files.c  leases.c  leases.h  script.c  serverpacket.c  udhcpd
users/watchdog/: watchdog
users/wget-1.19/: .version  ChangeLog  Makefile  Makefile.in  aclocal.m4  config.status  configure
users/wide-dhcpv6/: .users_config  cfparse.c  cftoken.c  dhcp6c.c  dhcp6ctl  dhcp6relay  y.tab.h
users/wireless_tools.25/: iwconfig  iwevent  iwgetid  iwlist  iwpriv  iwspy
users/xz-5.0.8/: Makefile  config.h  config.status  libtool
users/zlib-1.2.5/: Makefile  adler32.lo  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.2.5  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zlib.pc  zutil.lo
(+1990 files in other folders)
